@@ -1,6 +1,9 @@
 package sudoku;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashSet;
+import java.util.Scanner;
+import java.util.Set;
 
 public class Grid {
     ArrayList<Rule> rules;
@@ -25,7 +28,7 @@ public class Grid {
         ArrayList<Set<Position>> rulesPositions = new ArrayList<>();
         this.rules = new ArrayList<>();
         for (Sudoku sudoku : sudokus) {
-            for (int i=0; i<sudoku.getNumberRule(); i++) {
+            for (int i = 0; i < sudoku.getNumberRule(); i++) {
                 Set<Position> ruleAbsolutePositions = adjustPositions(sudoku.getRulePositions(i), resizeVector);
                 Rule rule = sudoku.getRule(i);
                 int index = rulesPositions.indexOf(ruleAbsolutePositions);
@@ -39,11 +42,11 @@ public class Grid {
         }
 
         // Init Cells in the gridCell
-        for(int i=0; i<rulesPositions.size(); i++){
-            for(Position pos : rulesPositions.get(i)){
+        for (int i = 0; i < rulesPositions.size(); i++) {
+            for (Position pos : rulesPositions.get(i)) {
                 int x = pos.getX();
                 int y = pos.getY();
-                if(this.gridCell[y][x] == null){
+                if (this.gridCell[y][x] == null) {
                     this.gridCell[y][x] = new Cell(i);
                 } else {
                     this.gridCell[y][x].addRule(i);
@@ -52,17 +55,17 @@ public class Grid {
         }
     }
 
-    public Position getSize(){
+    public Position getSize() {
         return this.size;
     }
 
-    public Cell getCell(Position position){
+    public Cell getCell(Position position) {
         return this.gridCell[position.getY()][position.getX()];
     }
 
-    public void reset(ArrayList<Rule> rules){
-        for(int y=0; y<this.size.getY(); y++){
-            for(int x=0; x<this.size.getX(); x++){
+    public void reset(ArrayList<Rule> rules) {
+        for (int y = 0; y < this.size.getY(); y++) {
+            for (int x = 0; x < this.size.getX(); x++) {
                 if (this.gridCell[y][x] != null) {
                     this.gridCell[y][x].resetValue();
                 }
@@ -85,33 +88,33 @@ public class Grid {
         }
     }
 
-    public void insertValue(String value, Position position){
-        if(this.canInsertValue(value, position)){
+    public void insertValue(String value, Position position) {
+        if (this.canInsertValue(value, position)) {
             this.handleInsertValue(value, position);
         }
     }
 
-    private void handleInsertValue(String value, Position position){
+    private void handleInsertValue(String value, Position position) {
         int x = position.getX();
         int y = position.getY();
         this.gridCell[y][x].insertValue(value);
-        for(int idRule : this.gridCell[y][x].getIdRules()){
+        for (int idRule : this.gridCell[y][x].getIdRules()) {
             System.out.println("Rule " + idRule + " is valid for " + value);
             this.rules.get(idRule).handleInsertValue(value);
         }
     }
 
-    public boolean canInsertValue(String value, Position position){
+    public boolean canInsertValue(String value, Position position) {
         int x = position.getX();
         int y = position.getY();
 
-        if(!this.isInsideGrid(position)){
+        if (!this.isInsideGrid(position)) {
             System.err.println("[Grid] Insert outside of a Sudoku");
             return false;
         }
 
-        for(int ruleId : this.gridCell[y][x].getIdRules()){
-            if(!this.rules.get(ruleId).isValid(value)){
+        for (int ruleId : this.gridCell[y][x].getIdRules()) {
+            if (!this.rules.get(ruleId).isValid(value)) {
                 System.out.println("Can't place " + value + " here");
                 return false;
             }
@@ -120,24 +123,24 @@ public class Grid {
         return true;
     }
 
-    private boolean isInsideGrid(Position position){
+    private boolean isInsideGrid(Position position) {
         return position.getX() >= 0 && position.getY() >= 0
                 && position.getX() < this.size.getX() && position.getY() < this.size.getY()
                 && this.gridCell[position.getY()][position.getX()] != null;
     }
 
-    private void removeCell(Position position){
+    private void removeCell(Position position) {
         int x = position.getX();
         int y = position.getY();
-        if(isInsideGrid(position)){
+        if (isInsideGrid(position)) {
             this.gridCell[y][x] = null;
         }
     }
 
-    public boolean isComplete(){
-        for(int y=0; y<this.size.getY(); y++){
-            for(int x=0; x<this.size.getX(); x++){
-                if(this.gridCell[y][x] != null && this.gridCell[y][x].getValue() == null){
+    public boolean isComplete() {
+        for (int y = 0; y < this.size.getY(); y++) {
+            for (int x = 0; x < this.size.getX(); x++) {
+                if (this.gridCell[y][x] != null && this.gridCell[y][x].getValue() == null) {
                     return false;
                 }
             }
@@ -145,9 +148,9 @@ public class Grid {
         return true;
     }
 
-    public void playTerminal(){
+    public void playTerminal() {
         Scanner scanner = new Scanner(System.in);
-        while(!this.isComplete()) {
+        while (!this.isComplete()) {
             this.print();
             System.out.print("Insert value: ");
             String value = scanner.nextLine();
@@ -161,43 +164,48 @@ public class Grid {
         this.print();
     }
 
-    public Set<String> getPossiblePlays(Position position){
+    public Set<String> getPossiblePlays(Position position) {
         int x = position.getX();
         int y = position.getY();
-        if(!this.isInsideGrid(position) || this.gridCell[y][x].getValue() != null || this.gridCell[y][x].getIdRules().isEmpty()){
+        if (!this.isInsideGrid(position) || this.gridCell[y][x].getValue() != null
+                || this.gridCell[y][x].getIdRules().isEmpty()) {
             return new HashSet<>();
         }
 
         Cell cell = this.gridCell[y][x];
         System.out.println("Rules for position " + position + ": " + cell.getIdRules());
 
-
-        Set<String> intersection = this.rules.get(this.gridCell[y][x].getIdRules().getFirst()).getPossibleMove();
+        Set<String> intersection = new HashSet<>(
+                this.rules.get(this.gridCell[y][x].getIdRules().get(0)).getPossibleMove());
         System.out.println("Initial possible moves from first rule: " + intersection);
 
-        for(int indexRule: this.gridCell[y][x].getIdRules()){
+        for (int indexRule : this.gridCell[y][x].getIdRules()) {
             Set<String> ruleMoves = this.rules.get(indexRule).getPossibleMove();
             System.out.println("Rule " + indexRule + " possible moves: " + ruleMoves);
 
-            intersection.retainAll(ruleMoves);
+            // Créer une copie de l'intersection avant de la modifier
+            Set<String> newIntersection = new HashSet<>(intersection);
+            newIntersection.retainAll(ruleMoves);
+            intersection = newIntersection;
+
             System.out.println("Intersection after rule " + indexRule + ": " + intersection);
         }
 
         return intersection;
     }
 
-    public int countPossiblePlays(Position position){
+    public int countPossiblePlays(Position position) {
         return this.getPossiblePlays(position).size();
     }
 
-    public void addRule(int idRule, String value, Set<String> rule){
+    public void addRule(int idRule, String value, Set<String> rule) {
         this.rules.get(idRule).add(value, rule);
     }
 
-    public ArrayList<Set<String>> getRules(Position position, String value){
+    public ArrayList<Set<String>> getRules(Position position, String value) {
         ArrayList<Set<String>> rules = new ArrayList<>();
         ArrayList<Integer> idRules = this.gridCell[position.getY()][position.getX()].getIdRules();
-        for(int idRule : idRules){
+        for (int idRule : idRules) {
             rules.add(this.rules.get(idRule).get(value));
         }
         return rules;
@@ -225,19 +233,19 @@ public class Grid {
                 "\u001B[38;5;202m", // Red-Orange
                 "\u001B[38;5;196m", // Red
                 "\u001B[38;5;201m", // Magenta
-                "\u001B[38;5;93m",  // Light Purple
-                "\u001B[38;5;57m",  // Purple
-                "\u001B[38;5;21m",  // Blue
-                "\u001B[38;5;51m",  // Cyan
-                "\u001B[38;5;46m",  // Green
-                "\u001B[38;5;118m"  // Light Green
+                "\u001B[38;5;93m", // Light Purple
+                "\u001B[38;5;57m", // Purple
+                "\u001B[38;5;21m", // Blue
+                "\u001B[38;5;51m", // Cyan
+                "\u001B[38;5;46m", // Green
+                "\u001B[38;5;118m" // Light Green
         };
         return colors[ruleCount % colors.length];
     }
 
-    Set<Position> adjustPositions(Set<Position> positions, Position adjustPosition){
+    Set<Position> adjustPositions(Set<Position> positions, Position adjustPosition) {
         Set<Position> absolutePositions = new HashSet<>();
-        for(Position position : positions){
+        for (Position position : positions) {
             absolutePositions.add(position.add(adjustPosition));
         }
         return absolutePositions;
